@@ -3,13 +3,7 @@ AUX apr-1.2.11-mint.patch 1200 RMD160 a025601bf786d9d9e29ef34500cb6ec5b0dd9089 S
 AUX apr-1.2.8-libtool.patch 238 RMD160 aa9ff4b541fa812a91cafa05fd54de962498a040 SHA1 21bdb8b5a3526e9d3682493ca2be09c3c38b4354 SHA256 b1a46643c46f93deb3e7c2e3bd0d1883a9fc1df6422c7aa2a241ef3f2cff3e35
 AUX apr-1.3.5-irix.patch 1610 RMD160 d7d083973727aec3c9f6ed06088246d2809f438b SHA1 67a81a6785438dc482bde5f6e1a6065248e66e87 SHA256 8c1e1d3c87dcb478a0f4e5a283eafb4ce8fe69b839365625868af85622d4fa81
 AUX config.layout.patch 818 RMD160 dada232c8b85e6c3c62fbc6caa1d05f36164dc27 SHA1 3822a0ec508165dd189e1b750bdf4e7778b6c21e SHA256 eeacaf654f23084e842bff02b97c083a8da5b5c056fd086166ba2d250edf3181
-DIST apr-1.3.5.tar.gz 1162875 RMD160 d66d5f80b710c448dd35c575987f5acd6eab6f6d SHA1 127dc26598afeb86139707e65d222c00caae926a SHA256 f047422b39a5e5d933d598bd9fca2a1184e1506e4cd66364a990c7f2cd76960d
-DIST apr-1.3.6.tar.gz 1163776 RMD160 08f11723e94ee6ea643d741bba4df3081e4f1a72 SHA1 49805851338e22161b70453693a39a7e2d812f77 SHA256 362b238cab7d19fdafbfd1df8cdc2bd2d49f3d5a3a5e194e05fb5a7bc55378d9
-DIST apr-1.3.7.tar.gz 1148153 RMD160 539e03b6ef8da828e53ce231e12802543e9de0f2 SHA1 7fcc110e60a77424b6f0a80fd7bc3ddce24d7dbd SHA256 52dd2f75ff0943d169221397e1b4d1f289e85a97ba0d09af26617a6ab4df6977
 DIST apr-1.3.8.tar.gz 1164963 RMD160 f45e1eaac6984e1207305f97c969d7adf806914b SHA1 6ed6a18230c48b4324eb0f6cbb02159a0762fc21 SHA256 587ec1eddd41201a0d30e63ada1b2d0f358be57138b6ce02ebdef1a12ffa29f2
-EBUILD apr-1.3.5.ebuild 2755 RMD160 7e77a466d0a3d8885b39b8a40118713b368e9584 SHA1 ac514b419bef1b9e3d4ac168e5b4126afc0e92ff SHA256 ff8db1d49bbd3233c762690fb2003680c90be5e4e36c5b893e0a7bc3fc78bdec
-EBUILD apr-1.3.6.ebuild 2775 RMD160 8ad587241682b5f6e57610dfce6730419a2cc1dd SHA1 52ebfde216c9644c4e81e38f21f0226529b8021d SHA256 98613e86b2adeb25378c0e02b993bec5a129402024ae160a9c48a370a8bd13b5
-EBUILD apr-1.3.7.ebuild 2883 RMD160 8f10b11501cac8a01b1448bc4c9b4061ba02a595 SHA1 dd196daf6e485b81fb463bcd44caa91495a733c3 SHA256 47455754718009e0fcef9465e6e3dd4ef42549e179d51d50a13b9c44d0358d3b
-EBUILD apr-1.3.8.ebuild 3157 RMD160 a9aba2e064e504915ccb0426cb2c50043e22878a SHA1 8dbdc6ddb9af2356bd85f13d485f9aaea3cf872a SHA256 10e7654c0d929984a95f8bd6f31d688510d70f532e0c11bdbb95213a4c4c47a9
-MISC ChangeLog 17370 RMD160 b0894cd861214bf4abeffb85a54f4c1a0a20ca28 SHA1 696952178c2d146a9a36a6375bdfd2367a4040d9 SHA256 cc5379e444eb4ebbd691922f7389536e72b3d7cf2ef3139d49e4f35b1ae95a63
+EBUILD apr-1.3.8.ebuild 3165 RMD160 5d335069a4b41d8064bb1d3477c8613377c9cf9a SHA1 533bbd2ed18ed2d897b5e562cd2daab8b131e38e SHA256 de69f4a9c97ef95b0945274f98051d7b85704228ee0fb0f383635a896ae2ad73
+MISC ChangeLog 17531 RMD160 840268ed81581f0808caa6001c1a82a1d46dde39 SHA1 bca7d7181249c9d6c9cf47ac11ffbe650d55f579 SHA256 2b3a292162138e395036d5b4db42a24e97277ea0d77e6b738c2f8c0043e81e92
 MISC metadata.xml 406 RMD160 9af45dec0119ed9afc091ef98d47a4dd7fcec2ae SHA1 d16a3b4f5efbf383b034e83f298a6d86ac9fd878 SHA256 bef219a00636140b1d99834ae19afc00b89f4df68068d1937a53c2c8ce51f2b9
