@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/apr
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr/ChangeLog,v 1.144 2009/08/24 14:51:54 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr/ChangeLog,v 1.145 2009/09/20 08:53:34 hollow Exp $
+
+  20 Sep 2009; Benedikt Böhm <hollow@gentoo.org> -apr-1.3.5.ebuild,
+  -apr-1.3.6.ebuild, -apr-1.3.7.ebuild, apr-1.3.8.ebuild:
+  fix #274246; remove old ebuild
 
   24 Aug 2009; Brent Baude <ranger@gentoo.org> apr-1.3.8.ebuild:
   Marking apr-1.3.8 ppc64 for bug 280514
